--- a/packages/superdoc/package.json
+++ b/packages/superdoc/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "superdoc",
+  "name": "@harbour-enterprises/superdoc",
   "type": "module",
-  "version": "1.0.0-beta.17",
+  "version": "1.0.0-beta.17-local",
   "license": "AGPL-3.0",
   "readme": "../../README.md",
   "files": [
